Cập nhật giao diện

--- a/EX_Math_App_For_Kids/app/src/main/res/values/strings.xml
+++ b/EX_Math_App_For_Kids/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">EX_Math_App_For_Kids</string>
+    <string name="math_is_fun">Math is Fun!</string>
 </resources>
