--- a/NavigationView/app/src/main/res/values/strings.xml
+++ b/NavigationView/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">NavigationView</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">HOME</string>
+    <string name="search">SEARCH</string>
+    <string name="profile">PROFILE</string>
 </resources>
