--- a/TiniChat/app/src/main/res/values/strings.xml
+++ b/TiniChat/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">TiniChat</string>
+    <string name="app_name">Tini Chat</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
